add-project-section

--- a/index.html
+++ b/index.html
@@ -72,17 +72,50 @@
         <!-- End About Section -->
 
         <!-- Project Section -->
-         <!-- <article id="project">
+        <article id="project">
             <h2 class="project-title">Our Projects</h2>
             <div class="container">
                 <div class="project-grid">
                     <div class="project-item">
-                        <img src="asset/project1.jpg" alt="image" class="project-image">
-                        <h3 class="project-name">Project 1</h3>
+                        <img src="asset/example.jpg" alt="image" class="project-image">
+                        <div class="overlay-text">
+                            <h3 class="project-name">Project 1</h3>
+                            <p class="project-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
+                                sit
+                                amet nulla auctor, vestibulum magna sed, convallis ex. Cum sociis nato quia nostra
+                                putamus,
+                                sicut temporibus autem quibusdam et aut officiis debitis
+                            </p>
+                        </div>
+                    </div>
+                    <div class="project-item">
+                        <img src="asset/example.jpg" alt="image" class="project-image">
+                        <div class="overlay-text">
+                            <h3 class="project-name">Project 1</h3>
+                            <p class="project-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
+                                sit
+                                amet nulla auctor, vestibulum magna sed, convallis ex. Cum sociis nato quia nostra
+                                putamus,
+                                sicut temporibus autem quibusdam et aut officiis debitis
+                            </p>
+                        </div>
+                    </div>
+                    <div class="project-item">
+                        <img src="asset/example.jpg" alt="image" class="project-image">
+                        <div class="overlay-text">
+                            <h3 class="project-name">Project 1</h3>
+                            <p class="project-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
+                                sit
+                                amet nulla auctor, vestibulum magna sed, convallis ex. Cum sociis nato quia nostra
+                                putamus,
+                                sicut temporibus autem quibusdam et aut officiis debitis
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
-         </article> -->
+            <button class="seemore-project">See More</button>
+        </article>
         <!-- End Project Section -->
     </main>
 </body>
