--- a/index.html
+++ b/index.html
@@ -114,9 +114,23 @@
                     </div>
                 </div>
             </div>
-            <button class="seemore-project">See More</button>
+            <button class="btn-project">See More</button>
         </article>
         <!-- End Project Section -->
+
+        <!-- Contact Section -->
+         <article id="contact">
+            <h2 class="contact-title">Contact Us</h2>
+                <div class="contact-grid">
+                    <form action="">
+                        <input type="text" placeholder="Enter Your Name" class="input-small">
+                        <input type="email" placeholder="examplegmail.com" class="input-small">
+                        <textarea class="message" name="messege" placeholder="Message" id="" cols="30" rows="10"></textarea>
+                        <button class="btn-contact" type="submit">Submit</button>
+                    </form>
+            </div>
+         </article>
+        <!-- End Contact Section -->
     </main>
 </body>
 
