--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -14,10 +15,10 @@
         <nav>
             <div class="logo">Logo</div>
             <ul class="nav-links">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Profile</a></li>
-                <li><a href="#">Project</a></li>
-                <li><a href="#" class="btn-contact">Contact Us</a></li>
+                <li><a href="#hero">Home</a></li>
+                <li><a href="profil.html">Profile</a></li>
+                <li><a href="project.html">Project</a></li>
+                <li><a href="#contact" class="btn-contact">Contact Us</a></li>
             </ul>
         </nav>
     </header>
@@ -26,7 +27,7 @@
         <article id="hero">
             <h1 class="welcome-1">This is us,</h1>
             <h1 class="welcome-2">Team One</h1>
-            <button class="btn-about">About Us</button>
+            <button class="btn-about"><a href="#about">About Us</a></button>
 
             <div class="dhots"></div>
             <div class="dhots"></div>
@@ -132,6 +133,33 @@
          </article>
         <!-- End Contact Section -->
     </main>
-</body>
+    <footer>
+        <img src="asset/footer.png" alt="">
+        <div class="main-footer">
+            <div class="content-foot-1">
+              <h1 class="teamone-foot">Team <br> One</h1>
+            </div>
+            <div class="content-foot">
+             <ul>
+                <li>kelompok1@gmail.com</li>
+                <li>@Kelompok1</li>
+                <li>+6212345678212</li>
+              </ul>
+            </div>
+          </div>
+          <div class="copyright">
+            <h4>© 2025 Kelompok One All Rights Reserved , Inc.</h4>
+          </div>
+          
+    </footer>
 
+</body>
 </html>
+
+<!-- <div class="footer-element">
+                <ul>
+                    <li>kelompok1@gmail.com</li>
+                    <li>@Kelompok1</li>
+                    <li>+6212345678212</li>
+                </ul>
+            </div> -->
