--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <!-- end left side -->
                 <!-- right side -->
                 <div class="right-side">
-                    <video class="img-about" src="asset/profile.mp4" autoplay loop></video>
+                    <video class="img-about" src="asset/profile2.mp4" autoplay loop></video>
                 </div>
                 <!-- end right side -->
             </div>
