--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                             </p>
                         </div>
                     </a>
-                    <a href="ayahhadis.com" target="_blank" class="project-item">
+                    <a href="https://www.ayahhadis.com/" target="_blank" class="project-item">
                         <img src="asset/project3.png" alt="image" class="project-image">
                         <div class="overlay-text">
                             <h3 class="project-name">Website Ayah Hadis</h3>
