--- a/profil.html
+++ b/profil.html
@@ -101,6 +101,10 @@
             padding-bottom: -1000px;
         }
 
+        .card-img-top{
+            object-fit: cover;
+        }
+
         .profile-card {
             background-color: white;
             height: 300px;
@@ -206,9 +210,75 @@
             <div class="row g-4 justify-content-center">
                 <div class="col-md-3">
                     <div class="card text-center" style="width: 200px; background-color: #7B7B7B; border-radius: 35px;">
-                        <img src="asset/image.png" class="card-img-top" alt="..." style="border-radius: 35px; width: 200px; height: 165px;">
+                        <img src="asset/aido.jpg" class="card-img-top" alt="..." style="border-radius: 35px; width: 200px; height: 165px;">
                         <div class="card-body">
-                        <h5 class="card-title" style="color: white;">Bagas</h5>
+                        <h5 class="card-title" style="color: white;">Aido Nayaka</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <div class="profile-card">
+                        <div class="card-background"></div>
+                        <div class="profile-content">
+                            <div class="text-content">
+                                <h3>Designer and Programmer</h3>
+                                <br>
+                                <h5>Experience</h5>
+                                <ul class="experience-list">
+                                    <li>1. Lorem ipsum</li>
+                                    <li>2. Lorem ipsum</li>
+                                    <li>3. Lorem ipsum</li>
+                                    <li>4. Lorem ipsum</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="social-icons">
+                            <a href="#"><i class="bi bi-github"></i></a>
+                            <a href="#"><i class="bi bi-linkedin"></i></a>
+                            <a href="#"><i class="bi bi-instagram"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row g-4 justify-content-center">
+                <div class="col-md-3">
+                    <div class="card text-center" style="width: 200px; background-color: #7B7B7B; border-radius: 35px;">
+                        <img src="asset/me.jpg" class="card-img-top" alt="..." style="border-radius: 35px; width: 200px; height: 165px;">
+                        <div class="card-body">
+                        <h5 class="card-title" style="color: white;">Fathul Falah</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <div class="profile-card">
+                        <div class="card-background"></div>
+                        <div class="profile-content">
+                            <div class="text-content">
+                                <h3>Front End Developer</h3>
+                                <br>
+                                <h5>Experience</h5>
+                                <ul class="experience-list">
+                                    <li>1. Assistant IT Manager</li>
+                                    <li>2. Programming Teacher</li>
+                                    <li>3. Freelance at Moura Project</li>
+                                    <li>4. Driver</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="social-icons">
+                            <a href="https://github.com/mff676"><i class="bi bi-github"></i></a>
+                            <a href="https://www.linkedin.com/in/muhammad-fathul-falah/"><i class="bi bi-linkedin"></i></a>
+                            <a href="https://www.instagram.com/mff_676/"><i class="bi bi-instagram"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row g-4 justify-content-center">
+                <div class="col-md-3">
+                    <div class="card text-center" style="width: 200px; background-color: #7B7B7B; border-radius: 35px;">
+                        <img src="asset/vahid.jpg" class="card-img-top" alt="..." style="border-radius: 35px; width: 200px; height: 165px;">
+                        <div class="card-body">
+                        <h5 class="card-title" style="color: white;">Vahid Bintang</h5>
                         </div>
                     </div>
                 </div>
@@ -239,75 +309,9 @@
             <div class="row g-4 justify-content-center">
                 <div class="col-md-3">
                     <div class="card text-center" style="width: 200px; background-color: #7B7B7B; border-radius: 35px;">
-                        <img src="asset/image.png" class="card-img-top" alt="..." style="border-radius: 35px; width: 200px; height: 165px;">
+                        <img src="asset/bagas.jpg" class="card-img-top" alt="..." style="border-radius: 35px; width: 200px; height: 165px;">
                         <div class="card-body">
-                        <h5 class="card-title" style="color: white;">Bagas</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-8">
-                    <div class="profile-card">
-                        <div class="card-background"></div>
-                        <div class="profile-content">
-                            <div class="text-content">
-                                <h3>Fullstack Developer</h3>
-                                <br>
-                                <h5>Experience</h5>
-                                <ul class="experience-list">
-                                    <li>1. Lorem ipsum</li>
-                                    <li>2. Lorem ipsum</li>
-                                    <li>3. Lorem ipsum</li>
-                                    <li>4. Lorem ipsum</li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="social-icons">
-                            <a href="#"><i class="bi bi-github"></i></a>
-                            <a href="#"><i class="bi bi-linkedin"></i></a>
-                            <a href="#"><i class="bi bi-instagram"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row g-4 justify-content-center">
-                <div class="col-md-3">
-                    <div class="card text-center" style="width: 200px; background-color: #7B7B7B; border-radius: 35px;">
-                        <img src="asset/image.png" class="card-img-top" alt="..." style="border-radius: 35px; width: 200px; height: 165px;">
-                        <div class="card-body">
-                        <h5 class="card-title" style="color: white;">Bagas</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-8">
-                    <div class="profile-card">
-                        <div class="card-background"></div>
-                        <div class="profile-content">
-                            <div class="text-content">
-                                <h3>Fullstack Developer</h3>
-                                <br>
-                                <h5>Experience</h5>
-                                <ul class="experience-list">
-                                    <li>1. Lorem ipsum</li>
-                                    <li>2. Lorem ipsum</li>
-                                    <li>3. Lorem ipsum</li>
-                                    <li>4. Lorem ipsum</li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="social-icons">
-                            <a href="#"><i class="bi bi-github"></i></a>
-                            <a href="#"><i class="bi bi-linkedin"></i></a>
-                            <a href="#"><i class="bi bi-instagram"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row g-4 justify-content-center">
-                <div class="col-md-3">
-                    <div class="card text-center" style="width: 200px; background-color: #7B7B7B; border-radius: 35px;">
-                        <img src="asset/image.png" class="card-img-top" alt="..." style="border-radius: 35px; width: 200px; height: 165px;">
-                        <div class="card-body">
-                        <h5 class="card-title" style="color: white;">Bagas</h5>
+                        <h5 class="card-title" style="color: white;">Bagas Nurdiyansah</h5>
                         </div>
                     </div>
                 </div>
