--- a/index.html
+++ b/index.html
@@ -81,23 +81,19 @@
                         <img src="asset/project1.jpg" alt="image" class="project-image">
                         <div class="overlay-text">
                             <h3 class="project-name">Website Club Volly</h3>
-                            <p class="project-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
-                                sit
-                                amet nulla auctor, vestibulum magna sed, convallis ex. Cum sociis nato quia nostra
-                                putamus,
-                                sicut temporibus autem quibusdam et aut officiis debitis
+                            <p class="project-description">
+                                Website landing page untuk club volly yang berisi beberapa informasi terkait klub tersebut
+                                dan galery terkait kegiatan pada club tersebut
                             </p>
                         </div>
                     </a>
                     <a href="https://github.com/mff676/Aici-Web/tree/main" target="_blank" class="project-item">
                         <img src="asset/project2.jpg" alt="image" class="project-image">
                         <div class="overlay-text">
-                            <h3 class="project-name">Project 1</h3>
-                            <p class="project-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
-                                sit
-                                amet nulla auctor, vestibulum magna sed, convallis ex. Cum sociis nato quia nostra
-                                putamus,
-                                sicut temporibus autem quibusdam et aut officiis debitis
+                            <h3 class="project-name">Aici Website</h3>
+                            <p class="project-description">
+                                Ini Adalah salah satu karya project bagas ketika masa PKL, ia membantu merombak website perusahaan sehingga
+                                terlihat lebih modern dan lebih powerfull dibanding website sebelumnya
                             </p>
                         </div>
                     </a>
@@ -105,17 +101,16 @@
                         <img src="asset/project3.png" alt="image" class="project-image">
                         <div class="overlay-text">
                             <h3 class="project-name">Website Ayah Hadis</h3>
-                            <p class="project-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
-                                sit
-                                amet nulla auctor, vestibulum magna sed, convallis ex. Cum sociis nato quia nostra
-                                putamus,
-                                sicut temporibus autem quibusdam et aut officiis debitis
+                            <p class="project-description">
+                                Ini adalah salah satu project akhir yang dibuat oleh Falah.
+                                menggunakan library utama react vite, ia mengkombuinasikan semua element html sehingga menciptakan
+                                website yang bermanfaat itu.
                             </p>
                         </div>
                     </a>
                 </div>
             </div>
-            <button class="btn-project">See More</button>
+            <a class="btn-project" href="project.html">See More</a>
         </article>
         <!-- End Project Section -->
 
