--- a/profil.html
+++ b/profil.html
@@ -223,19 +223,14 @@
                             <div class="text-content">
                                 <h3>Designer and Programmer</h3>
                                 <br>
-                                <h5>Experience</h5>
-                                <ul class="experience-list">
-                                    <li>1. Lorem ipsum</li>
-                                    <li>2. Lorem ipsum</li>
-                                    <li>3. Lorem ipsum</li>
-                                    <li>4. Lorem ipsum</li>
-                                </ul>
+                                <h5>Halo, nama saya Aido, dan saya adalah seorang junior web full-stack developer. Saya memiliki passion dalam menciptakan situs web yang dinamis dan responsif, serta memiliki keterampilan di teknologi front-end seperti HTML, CSS, dan JavaScript, serta framework back-end seperti Node.js</h5>
                             </div>
                         </div>
                         <div class="social-icons">
-                            <a href="#"><i class="bi bi-github"></i></a>
-                            <a href="#"><i class="bi bi-linkedin"></i></a>
-                            <a href="#"><i class="bi bi-instagram"></i></a>
+                            <a href="https://github.com/Unknwonnay"><i class="bi bi-github"></i></a>
+                            <a href="http://www.linkedin.com/in/aido-nayaka-9847a1293"><i class="bi bi-linkedin"></i></a>
+                            <a href="https://www.instagram.com/naycaaido/"><i class="bi bi-instagram"></i></a>
+                        
                         </div>
                     </div>
                 </div>
@@ -246,7 +241,7 @@
                         <img src="asset/me.jpg" class="card-img-top" alt="..." style="border-radius: 35px; width: 200px; height: 165px;">
                         <div class="card-body">
                         <h5 class="card-title" style="color: white;">Fathul Falah</h5>
-                        </div>
+                    </div>
                     </div>
                 </div>
                 <div class="col-md-8">
@@ -256,13 +251,7 @@
                             <div class="text-content">
                                 <h3>Front End Developer</h3>
                                 <br>
-                                <h5>Experience</h5>
-                                <ul class="experience-list">
-                                    <li>1. Assistant IT Manager</li>
-                                    <li>2. Programming Teacher</li>
-                                    <li>3. Freelance at Moura Project</li>
-                                    <li>4. Driver</li>
-                                </ul>
+                                <h5>Halo! Aku Muhammad Fathul Falah, seorang Junior Developer yang suka banget ngulik web development dan teknologi digital. Aku biasa pakai JavaScript, React, Python, SQL, dan juga ngembangin website. Sekarang aku lagi terus belajar buat bikin solusi digital yang keren dan bermanfaat</h5>
                             </div>
                         </div>
                         <div class="social-icons">
@@ -289,19 +278,13 @@
                             <div class="text-content">
                                 <h3>Fullstack Developer</h3>
                                 <br>
-                                <h5>Experience</h5>
-                                <ul class="experience-list">
-                                    <li>1. Lorem ipsum</li>
-                                    <li>2. Lorem ipsum</li>
-                                    <li>3. Lorem ipsum</li>
-                                    <li>4. Lorem ipsum</li>
-                                </ul>
+                                <h5>Halo, siapapun yang melihat profile saya, nama saya Vahid Bintang Hasyeemian… ini pengalaman pertama saya dalam bidang pemrograman web</h5>
                             </div>
                         </div>
                         <div class="social-icons">
-                            <a href="#"><i class="bi bi-github"></i></a>
+                            <a href="https://github.com/Ganenag"><i class="bi bi-github"></i></a>
                             <a href="#"><i class="bi bi-linkedin"></i></a>
-                            <a href="#"><i class="bi bi-instagram"></i></a>
+                            <a href="https://www.instagram.com/hitdbinh/"><i class="bi bi-instagram"></i></a>
                         </div>
                     </div>
                 </div>
@@ -322,19 +305,13 @@
                             <div class="text-content">
                                 <h3>Fullstack Developer</h3>
                                 <br>
-                                <h5>Experience</h5>
-                                <ul class="experience-list">
-                                    <li>1. Lorem ipsum</li>
-                                    <li>2. Lorem ipsum</li>
-                                    <li>3. Lorem ipsum</li>
-                                    <li>4. Lorem ipsum</li>
-                                </ul>
+                                <h5>Halo, saya Bagas Nurdiansyah, seorang Junior Developer yang antusias dengan pengembangan web dan teknologi digital. Dengan dasar yang kuat dalam HTML, CSS, PHP, dan framework seperti Bootstrap, saya terus belajar dan mengasah kemampuan untuk menciptakan solusi digital yang inovatif.</h5>
                             </div>
                         </div>
                         <div class="social-icons">
-                            <a href="#"><i class="bi bi-github"></i></a>
+                            <a href="https://github.com/Bagass-08"><i class="bi bi-github"></i></a>
                             <a href="#"><i class="bi bi-linkedin"></i></a>
-                            <a href="#"><i class="bi bi-instagram"></i></a>
+                            <a href="https://www.instagram.com/bagasnrdsyh?igsh=MWtubnRlZ2w2c3pvcg=="><i class="bi bi-instagram"></i></a>
                         </div>
                     </div>
                 </div>
