--- a/index.html
+++ b/index.html
@@ -65,7 +65,10 @@
                 <!-- end left side -->
                 <!-- right side -->
                 <div class="right-side">
-                    <video class="img-about" src="asset/profile2.mp4" autoplay loop></video>
+                    <video class="img-about"  autoplay muted loop>
+                        <source src="asset/profile2.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
                 </div>
                 <!-- end right side -->
             </div>
