--- a/project.html
+++ b/project.html
@@ -114,6 +114,10 @@
             border: none;
             color: white;
         }
+
+        a img {
+            border-radius: 20px;
+        }
     </style>
 </head>
 
@@ -134,13 +138,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <img src="asset/our.png" style="width: 500px;" alt="image" >
+                    <a href="https://github.com/mff676/Aici-Web/tree/main"><img src="asset/project1.jpg" style="width: 500px;" alt="image" ></a>
                 </div>
                 <div class="col-md-5 align-self-end">
                     <div class="card">
                         <div class="card-body">
-                          <h2 class="card-title">Judul</h2>
-                          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                          <h2 class="card-title">Aici Website</h2>
+                          <br>
+                          <p class="card-text">Ini Adalah salah satu karya project bagas ketika masa PKL, ia membantu merombak website perusahaan sehingga
+                            terlihat lebih modern dan lebih powerfull dibanding website sebelumnya </p>
                         </div>
                     </div>
                 </div>
@@ -149,24 +155,29 @@
                 <div class="col-md-6 align-self-end">
                     <div class="card">
                         <div class="card-body">
-                          <h2 class="card-title">Judul</h2>
-                          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                          <h2 class="card-title">Website Club Voll</h2>
+                          <br>
+                          <p class="card-text">Website landing page untuk club volly yang berisi beberapa informasi terkait klub tersebut
+                            dan galery terkait kegiatan pada club tersebut</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-5">
-                    <img src="asset/our.png" style="width: 500px;" alt="image" >
+                    <a href="https://github.com/mff676/club-voli"><img src="asset/project2.jpg" style="width: 500px;" alt="image" ></a>
                 </div>
             </div>
             <div class="row ">
                 <div class="col-md-6">
-                    <img src="asset/our.png" style="width: 500px;" alt="image" >
+                    <a href="https://www.ayahhadis.com/"><img src="asset/project3.png" style="width: 500px;" alt="image" ></a>
                 </div>
                 <div class="col-md-5 align-self-end">
                     <div class="card">
                         <div class="card-body">
-                          <h2 class="card-title">Judul</h2>
-                          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                          <h2 class="card-title">Website Ayah Sadis</h2>
+                          <br>
+                          <p class="card-text">Ini adalah salah satu project akhir yang dibuat oleh Falah.
+                            menggunakan library utama react vite, ia mengkombuinasikan semua element html sehingga menciptakan
+                            website yang bermanfaat itu.</p>
                         </div>
                     </div>
                 </div>
