--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body>   
     <!-- Header section -->
     <header>
         <nav>
@@ -78,25 +78,25 @@
         <!-- Project Section -->
         <article id="project">
             <h2 class="project-title">Our Projects</h2>
-            <div class="container">
+            <div class="container-project">
                 <div class="project-grid">
-                    <a href="https://github.com/mff676/Aici-Web/tree/main" target="_blank" class="project-item">
-                        <img src="asset/project1.jpg" alt="image" class="project-image">
-                        <div class="overlay-text">
-                            <h3 class="project-name">Aici Website</h3>
-                            <p class="project-description">
-                                Ini Adalah salah satu karya project bagas ketika masa PKL, ia membantu merombak website perusahaan sehingga
-                                terlihat lebih modern dan lebih powerfull dibanding website sebelumnya 
-                            </p>
-                        </div>
-                    </a>
                     <a href="https://github.com/mff676/club-voli" target="_blank" class="project-item">
-                        <img src="asset/project2.jpg" alt="image" class="project-image">
+                        <img src="asset/project1.jpg" alt="image" class="project-image">
                         <div class="overlay-text">
                             <h3 class="project-name">Website Club Volly</h3>
                             <p class="project-description">
                                 Website landing page untuk club volly yang berisi beberapa informasi terkait klub tersebut
                                 dan galery terkait kegiatan pada club tersebut
+                            </p>
+                        </div>
+                    </a>
+                    <a href="https://github.com/mff676/Aici-Web/tree/main" target="_blank" class="project-item">
+                        <img src="asset/project2.jpg" alt="image" class="project-image">
+                        <div class="overlay-text">
+                            <h3 class="project-name">Aici Website</h3>
+                            <p class="project-description">
+                                Ini Adalah salah satu karya project bagas ketika masa PKL, ia membantu merombak website perusahaan sehingga
+                                terlihat lebih modern dan lebih powerfull dibanding website sebelumnya
                             </p>
                         </div>
                     </a>
@@ -113,7 +113,7 @@
                     </a>
                 </div>
             </div>
-            <a class="btn-project" href="project.html">See More</a>
+            <a class="btn-project" href="project.html" style="text-decoration: none;">See More</a>
         </article>
         <!-- End Project Section -->
 
@@ -150,14 +150,7 @@
           </div>
           
     </footer>
-
+<script src="main.js"></script>
 </body>
 </html>
 
-<!-- <div class="footer-element">
-                <ul>
-                    <li>kelompok1@gmail.com</li>
-                    <li>@Kelompok1</li>
-                    <li>+6212345678212</li>
-                </ul>
-            </div> -->
