--- a/project.html
+++ b/project.html
@@ -183,7 +183,50 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col-md-6 align-self-end">
+                <div class="card">
+                    <div class="card-body">
+                      <h2 class="card-title">Cevlix Cinema</h2>
+                      <br>
+                      <p class="card-text">Terinspirasi dari netflix, pada website ini saya menarik data API Film yang tersedia di internet.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-5">
+                <a href="https://mff676.github.io/Cevlix-Cinema/"><img src="asset/project5.png" style="width: 500px;" alt="image" ></a>
+            </div>
+        </div>
+        <div class="row ">
+            <div class="col-md-6">
+                    <a href="https://mff676.github.io/Cepi-Market/"><img src="asset/project4.png" style="width: 500px;" alt="image" ></a>
+                </div>
+                <div class="col-md-5 align-self-end">
+                    <div class="card">
+                        <div class="card-body">
+                            <h2 class="card-title">Website Ecommerce React</h2>
+                          <br>
+                          <p class="card-text">Ini adalah salah satu project selama saya menempuh pendidikan smk, yang dimana saya melatih diri saya untuk membuat layout menggunakan library reactjs</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         
+    </div>
+    <div class="row mb-5">
+        <div class="col-md-6 align-self-end">
+            <div class="card">
+                <div class="card-body">
+                  <h2 class="card-title">NgelehCuk! Website</h2>
+                  <br>
+                  <p class="card-text">Website ini menawarkan fitur resep makanan, mulai dari penyiapan bahan-bahan hingga langkah-langkah memasak nya satu per satu, selain itu website ini juga menyediakan video tutorial untuk memudahkan pengguna mengikuti instruksi yang diberikan pada website</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-5">
+            <a href="https://mff676.github.io/Recipe-Project/"><img src="asset/project6.png" style="width: 500px;" alt="image" ></a>
+        </div>
     </div>
 
     <!-- Bootstrap JS and Icons -->
